收藏点赞功能的初步实现

--- a/shiyongxiaozhushou/pages/page1/page1.wxml
+++ b/shiyongxiaozhushou/pages/page1/page1.wxml
@@ -23,7 +23,7 @@
 
 <view class="body">
   <block wx:for="{{datalist}}" wx:key="index">
-    <view class="itemroot" bindtap="goDetail" data-id="{{item.articleid}}">
+    <view class="article" bindtap="goDetail" data-articleid="{{item.articleid}}">
       <view class='article_item'>
         <image class="article_img" src="{{item.pic}}"></image> 
       </view>
