--- a/shiyongxiaozhushou/pages/home/home.wxss
+++ b/shiyongxiaozhushou/pages/home/home.wxss
@@ -11,25 +11,27 @@
   overflow-y:scroll;
   /* border:1rpx solid black; */
 }
-.block{
+
+.banner_img{
+  width:650rpx;
+  height:300rpx;
+}
+/* .block{
   margin-top:25rpx;
   width:170rpx;
   height:200rpx;
   float: left;
-  /* border:1rpx solid black; */
   box-sizing: border-box;
 }
 .block_item{
   width:140rpx;
   height:140rpx;
-  /* border:1px solid blueviolet; */
   box-sizing: border-box;
   border-radius:30rpx;
 }
 #block1{
    background-color:#EAF1FE;
  }
-
 #block2{
   background-color:#FDF3F1;
 }
@@ -39,20 +41,16 @@
 #block4{
   background-color:#EFFAFB;
 }
-
-
-
 .block_txt{
   padding-left:40rpx;
   font-size:0.8em;
   font-weight:600;
 }
-
 .block_img{
   width:100rpx;
   height:100rpx;
   margin:15rpx 15rpx;
-}
+} */
 
 .article_img{
   width:250rpx;
