--- a/shiyongxiaozhushou/pages/home/home.wxss
+++ b/shiyongxiaozhushou/pages/home/home.wxss
@@ -16,45 +16,20 @@
   width:650rpx;
   height:300rpx;
 }
-/* .block{
-  margin-top:25rpx;
-  width:170rpx;
-  height:200rpx;
-  float: left;
-  box-sizing: border-box;
-}
-.block_item{
-  width:140rpx;
-  height:140rpx;
-  box-sizing: border-box;
-  border-radius:30rpx;
-}
-#block1{
-   background-color:#EAF1FE;
- }
-#block2{
-  background-color:#FDF3F1;
-}
-#block3{
-  background-color:#FFF8E6;
-}
-#block4{
-  background-color:#EFFAFB;
-}
-.block_txt{
-  padding-left:40rpx;
-  font-size:0.8em;
-  font-weight:600;
-}
-.block_img{
-  width:100rpx;
-  height:100rpx;
-  margin:15rpx 15rpx;
-} */
 
 .article_img{
   width:250rpx;
   height:150rpx;
   margin-top:50rpx;
   margin-left:30rpx;
+}
+
+
+.view{
+  font-size:0.9em;
+  font-weight:500;
+  color:#808080;
+  display: inline;
+  padding-left:60rpx;
+  /* background-color: yellow; */
 }
