--- a/shiyongxiaozhushou/pages/page1/page1.wxml
+++ b/shiyongxiaozhushou/pages/page1/page1.wxml
@@ -14,7 +14,6 @@
     <view class="class_txt {{classid==3?'active':''}}"  bindtap="goClass" data-classid="3">设备</view>
   </view>
 </view>
-<view>{{classid}}</view>
 <view class="body">
   <block wx:for="{{datalist}}" wx:key="index">
     <view class="article" bindtap="goDetail" data-articleid="{{item.articleid}}">
@@ -24,12 +23,7 @@
       <view class="article_txt">
         <view class="article_title"> {{item.title}}</view>
         <view class="article_detail">
-          <image class="detail_img" src="/images/home/liulan.png"></image>
-          <span class="detail_txt" id="sum">{{item.view_sum}}</span>
-          <image class="detail_img" src="/images/home/shoucang.png"></image>
-          <span class="detail_txt">{{item.shoucang_sum}}</span>
-          <image class="detail_img" src="/images/home/dianzan.png"></image>
-          <span class="detail_txt" >{{item.dianzan_sum}}</span>
+          <view class="detail_txt">{{item.yuanchuang}}:{{item.author}}</view>
         </view>
       </view>
     </view>
